--- a/available.html
+++ b/available.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.86, minimum-scale=0.86, maximum-scale=3.0">
-        <title>OK Computer Pakistan | Account Information</title>
+        <title>OK Computer Latvian | Account Information</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -77,12 +77,12 @@
         <footer id="foot" >
             <div class="Head-office">
                 Head Office,<br>
-                A-25, Bahadurabad Chowrangi Karachi, Pakistan<br><br>
-                &phone; UAN: 111-729-526<span style="margin-left: 20px;">&phone; (+0092-213) 4130786-90</span><br>
-                &phone; CELL: 92-311-1729526<br>
-                &phone; USA NO +1(716)941 7792<br>
-                &phone; UK NO (+44)115 970 6256<br>
-                &#9993; info@OKComputer.com
+                A-25, Riga Kronvalda Parks, Latvia<br><br>
+                &phone; LV: 1113-5264<span style="margin-left: 20px;">&phone; (+371-0932) 4130786-90</span><br>
+                &phone; CELL: 9311-1729<br>
+                &phone; LV NO +371941-7792<br>
+                &phone; LV NO (+371)9704-6256<br>
+                &#9993; info@OKComputer.LV
             </div>
             <div class="Links">
                 <span style="color: white;font-weight: bold;">Useful Links</span><br>
@@ -97,6 +97,6 @@
                 <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="./images/whatsapp-icon.jpg" alt="Whatsapp Icon" class="img-10"></a>
             </div>
         </footer>
-        <div class="foot-1">Copyright &copy; OK Computer Pakistan 2020. All Rights Reserved </div>
+        <div class="foot-1">Copyright &copy; OK Computer Latvian 2023. All Rights Reserved </div>
     </body>
 </html>
