--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.86, minimum-scale=0.86, maximum-scale=3.0">
-        <title>OK Computer Pakistan | Contact Information</title>
+        <title>OK Computer Latvian | Contact Information</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -84,10 +84,10 @@
                     <hr>
                     <p class="card-text">
                         <p style="font-weight: 900;">OK Computer</p>
-                        <p><strong>Address :</strong>&emsp;FL 4/20, Main Rashid Minhas Road, Gulshan-e-Iqbal Block-5, Karachi, Pakistan.</p>
-                        <p><strong>Phone:</strong>&emsp;(92-21) 34155030</p>
-                        <p><strong>Email:</strong>&emsp;info@okcomputer.com.pk</p>
-                        <p><strong>Website:</strong>&emsp;www.okcomputer.com.pk</p>
+                        <p><strong>Address :</strong>&emsp;FL 4/20, Kronvalda, parks Block-5, Riga, Latvia.</p>
+                        <p><strong>Phone:</strong>&emsp;(+371) 34155030</p>
+                        <p><strong>Email:</strong>&emsp;info@okcomputer.com.lv</p>
+                        <p><strong>Website:</strong>&emsp;www.okcomputer.com.lv</p>
                     </p>
                 </div>
             </div><br>
@@ -144,18 +144,18 @@
             </div>
             <div style="text-align: center;margin-top: 2.5em;margin-bottom: 2.5em;">
                 <h1><ins>Google Maps</ins></h1>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7243.246175095235!2d67.03748410107484!3d24.808356696115023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1590761689439!5m2!1sen!2s" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="300" height="300"></iframe>
+                <iframe src="https://www.google.com/maps/search/kronvalda+parks/@56.9561002,24.1044513,17z/data=!3m1!4b1?entry=ttu" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="300" height="300"></iframe>
             </div>
         </main>
         <footer id="foot">
             <div class="Head-office">
                 Head Office,<br>
-                A-25, Bahadurabad Chowrangi Karachi, Pakistan<br><br>
-                &phone; UAN: 111-729-526<span style="margin-left: 20px;">&phone; (+0092-213) 4130786-90</span><br>
-                &phone; CELL: 92-311-1729526<br>
-                &phone; USA NO +1(716)941 7792<br>
-                &phone; UK NO (+44)115 970 6256<br>
-                &#9993; info@OKComputer.com
+                A-25, Riga Kronvalda Parks, Latvia<br><br>
+                &phone; LV: 1113-5264<span style="margin-left: 20px;">&phone; (+371-0932) 4130786-90</span><br>
+                &phone; CELL: 9311-1729<br>
+                &phone; LV NO +371941-7792<br>
+                &phone; LV NO (+371)9704-6256<br>
+                &#9993; info@OKComputer.LV
             </div>
             <div class="Links">
                 <span style="color: white;font-weight: bold;">Useful Links</span><br>
@@ -170,6 +170,6 @@
                 <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="./images/whatsapp-icon.jpg" alt="Whatsapp Icon" class="img-10"></a>
             </div>
         </footer>
-        <div class="foot-1">Copyright &copy; OK Computer Pakistan 2020. All Rights Reserved </div>
+        <div class="foot-1">Copyright &copy; OK Computer Latvian 2023. All Rights Reserved </div>
     </body>
 </html>
