--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.86, minimum-scale=0.86, maximum-scale=3.0">
-        <title>OK Computer Pakistan | About Us</title>
+        <title>OK Computer Latvian | About Us</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -79,7 +79,7 @@
             <h1 style="margin-top: 1.5em;"><i class="fas fa-info"></i> About Us</h1>
             <div style="margin-top: 20px;margin-bottom: 20px;">
                 <p style="text-align: justify;">
-                    Over the period of the last 11 years, YOU have taken OK Computer from a simple business idea to a revolution in the heart of Pakistan’s Information Technology market. The idea behind the development of OK Computer was never about creating a retailer with good prices; but to give birth to a place where people could be served as a part of the family. Where they could actually feel the touch of Information Technology’s application in the way they are dealt with. The world has moved to the next generation of business relationships; and we are proud to be the first in Pakistan’s Information Technology market to accept that “Yes, YOU are important!” With around 1,000% growth rate, we are proud and extremely happy to quote that OK Computer has a family of approximately 40,000 (and growing) online family members and more than 60,000 (and growing) customer’s offline; in comparison to a total of 10 customers 11 years ago. The world is changing and OK Computer happily accepts that the customers of today are more tech savvy and demand value for their money. We believe that change is the only thing constant and in order to deliver to you the value you deserve, we are always in the process of evolving to the next best level. <br><br>
+                    Over the period of the last 11 years, YOU have taken OK Computer from a simple business idea to a revolution in the heart of Latvia Information Technology market. The idea behind the development of OK Computer was never about creating a retailer with good prices; but to give birth to a place where people could be served as a part of the family. Where they could actually feel the touch of Information Technology’s application in the way they are dealt with. The world has moved to the next generation of business relationships; and we are proud to be the first in Latvia Information Technology market to accept that “Yes, YOU are important!” With around 1,000% growth rate, we are proud and extremely happy to quote that OK Computer has a family of approximately 40,000 (and growing) online family members and more than 60,000 (and growing) customer’s offline; in comparison to a total of 10 customers 11 years ago. The world is changing and OK Computer happily accepts that the customers of today are more tech savvy and demand value for their money. We believe that change is the only thing constant and in order to deliver to you the value you deserve, we are always in the process of evolving to the next best level. <br><br>
                     The success of OK Computer is not a magical coincidence but a result of experienced professionals listening to and implementing every suggestion that YOU gifted us with over the past 11 years. The world has revolutionized and it’s time to move from those close gullied and air tight markets to a system of automation where you do not need to run after sales people asking for product specification and quotations. Have a nice sip of coffee, stretch your legs and go through the updated, complete and vast range of products awaiting your royal presence by a few clicks. Even if you are not comfortable at dealing with an online market and need a more personal touch and suggestion to things; come visit OK Computer. 11 years ago people didn’t have online markets; and OK Computer respects your demand for one to one communication and anxiously awaits your presence. <br><br>
                     There might still be a lot of things that you could want to know about OK Computer. Simply Sign up, feel free, and don’t be shy. We never tell our customers to hush away because there are others to deal with or we already met our daily sales quota. So, welcome to OK Computer; and don’t you worry because whether you are a corporate client or an individual customer; we are family now. Welcome to the Information Technology’s Revolution in Pakistan! <br><br>
                 </p>
@@ -88,12 +88,12 @@
         <footer id="foot">
             <div class="Head-office">
                 Head Office,<br>
-                A-25, Bahadurabad Chowrangi Karachi, Pakistan<br><br>
-                &phone; UAN: 111-729-526<span style="margin-left: 20px;">&phone; (+0092-213) 4130786-90</span><br>
-                &phone; CELL: 92-311-1729526<br>
-                &phone; USA NO +1(716)941 7792<br>
-                &phone; UK NO (+44)115 970 6256<br>
-                &#9993; info@OKComputer.com
+                A-25, Riga Kronvalda Parks, Latvia<br><br>
+                &phone; LV: 1113-5264<span style="margin-left: 20px;">&phone; (+371-0932) 4130786-90</span><br>
+                &phone; CELL: 9311-1729<br>
+                &phone; LV NO +371941-7792<br>
+                &phone; LV NO (+371)9704-6256<br>
+                &#9993; info@OKComputer.LV
             </div>
             <div class="Links">
                 <span style="color: white;font-weight: bold;">Useful Links</span><br>
@@ -108,6 +108,6 @@
                 <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="./images/whatsapp-icon.jpg" alt="Whatsapp Icon" class="img-10"></a>
             </div>
         </footer>
-        <div class="foot-1">Copyright &copy; OK Computer Pakistan 2020. All Rights Reserved </div>
+        <div class="foot-1">Copyright &copy; OK Computer Latvian 2023. All Rights Reserved </div>
     </body>
 </html>
