--- a/contacts.html
+++ b/contacts.html
@@ -111,7 +111,7 @@
                                         <input type="email" name="Email Address" id="email_address" class="form-control" style="width: 20rem;margin-right: 1em;" required placeholder="shoaibmalik123@gmail.com">
                                     </label>
                                     <label for="number">Mobile No<br>
-                                        <input type="number" name="Number" id="number" class="form-control" style="width: 20rem;" placeholder="03352140806">
+                                        <input type="number" name="Number" id="number" class="form-control" style="width: 20rem;" placeholder="+371-12345678">
                                     </label>
                                 </div>
                                 <div style="margin-top: 1.5em;">
@@ -144,7 +144,7 @@
             </div>
             <div style="text-align: center;margin-top: 2.5em;margin-bottom: 2.5em;">
                 <h1><ins>Google Maps</ins></h1>
-                <iframe src="https://www.google.com/maps/search/kronvalda+parks/@56.9561002,24.1044513,17z/data=!3m1!4b1?entry=ttu" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="300" height="300"></iframe>
+                <iframe src="https://goo.gl/maps/nnHwrH4kJ7pk2Gp87?coh=178573&entry=tt" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" width="300" height="300"></iframe>
             </div>
         </main>
         <footer id="foot">
