--- a/available.html
+++ b/available.html
@@ -34,6 +34,8 @@
                     </div>
                     
                     <a href="./available.html">Login</a>
+                    <a href="login.php">Logout</a>
+                     </a>
                 </span>
             </div>
 
